Fix layout on smaller screens

--- a/src/components/Player.scss
+++ b/src/components/Player.scss
@@ -1,13 +1,21 @@
 .podcast-player {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 20px;
   border-radius: 8px;
   background: white;
+
+  @media (min-width: 500px) {
+    flex-direction: row;
+    padding: 10px;
+  }
 }
 
 .podcast-player__play-pause {
+  width: 52px;
+  height: 52px;
   cursor: pointer;
 }
 
@@ -15,6 +23,10 @@
   width: 180px;
   display: flex;
   justify-content: space-around;
+
+  @media (max-width: 500px) {
+    margin: 20px 0;
+  }
 }
 
 .podcast-player__time {
