--- a/src/components/_select.scss
+++ b/src/components/_select.scss
@@ -1,13 +1,13 @@
 .select {
   position: relative;
-  width: 50px;
+  width: 55px;
   height: 30px;
   overflow: hidden;
   border: 3px solid #bb1155;
   border-radius: 8px;
 
   select {
-    padding: 0px 5px 5px 12px;
+    padding: 0px 5px 5px 5px;
     width: 68px;
     height: 30px;
     border: none;
